--- a/package.json
+++ b/package.json
@@ -7,6 +7,9 @@
     "lint": "eslint . --ext .ts",
     "format": "prettier --write .",
     "db:setup": "tsx src/db.ts",
+    "db:migrate": "tsx src/db/migrate.ts",
+    "db:clean": "tsx src/db/clean.ts",
+    "db:show": "tsx src/db/showTable.ts",
     "dev": "tsx --env-file .env src/index.ts",
     "build": "tsc",
     "start": "node dist/index.js",
